[tool.poetry]
name = "s-chat"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
    "Timur Valiev <cptchunk@yandex.ru>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"


[tool.poetry.group.lint.dependencies]
wemake-python-styleguide = "^0.19.2"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
nitpick = "^0.35.0"
ipython = "^8.30.0"


[tool.nitpick]
style = "https://raw.githubusercontent.com/imtoopunkforyou/itpfy-style/refs/heads/main/py/imtoopunkforyou.toml"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
